ghc-4335c07/testsuite/tests/parser/should_fail/T12429.hs
module X where
  import Data.Text (pattern Y)
  x = 3
